--- a/views/guestpage/search_menu.html
+++ b/views/guestpage/search_menu.html
@@ -1,4 +1,4 @@
-<div id="searchMenu">
+<div id="searchMenu" class="autoFlow">
     <header>
         <a href="#" id="toggleSearchMenu"><span class="icon white-close"></span></a>
         <h2>Search</h2>
