--- a/views/guestpage/dock_menu.html
+++ b/views/guestpage/dock_menu.html
@@ -1,10 +1,11 @@
     <div id="dockMenu" class="fancy" style="display: none">
         <header>universeOS&nbsp;</header>
-        <ul class="appList">
-
-            <li class="" onclick="filesystem.show()" onmouseup="closeDockMenu()"><i class="icon icon-folder" style="height:16px;width:16px;"></i>&nbsp;&nbsp;Filesystem</li>
-            <li class="" onclick="reader.show()" onmouseup="closeDockMenu()"><img src="./gfx/viewer.png" border="0" height="16">&nbsp;&nbsp;Reader</li>
-        </ul>
+<ul class="appList">
+    <li onclick="applications.show('filesystem');" onmouseup="closeDockMenu()"><img src="gfx/applicationIcons/white/filesystem.svg" border="0" height="32" width="32">filesystem</li>
+    <li onclick="applications.show('telescope');" onmouseup="closeDockMenu()"><img src="gfx/applicationIcons/white/filesystem.svg" border="0" height="32" width="32">telescope</li>
+    <li onclick="applications.show('reader');" onmouseup="closeDockMenu()"><img src="gfx/applicationIcons/white/filesystem.svg" border="0" height="32" width="32">Display</li>
+    <!--<li onclick="applications.show('player');" onmouseup="closeDockMenu()"><img src="gfx/applicationIcons/white/player.svg" border="0" height="32" width="32">player</li>-->
+</ul>
         <div>
         </div>
     </div>
