cursor:default added to body

--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -27,6 +27,9 @@ body {
         -ms-user-select: none;
         user-select: none;
         overflow:hidden;
+        
+        
+   cursor: default;
 }
 
 ul {
