script.html updated

--- a/views/header/scripts.html
+++ b/views/header/scripts.html
@@ -1,9 +1,9 @@
-<script type="text/javascript" src="inc/js/plugins.js"></script>
-<script type="text/javascript" src="inc/js/config.js"></script>
-<script type="text/javascript" src="inc/js/functions.js"></script>
-<script src="inc/js/bootstrap.min.js"></script>
-<script src="inc/plugins/ckeditor/ckeditor.js"></script>
-<script type="text/javascript" src="inc/plugins/ckeditor/jquery.js"></script>
+<script type="text/javascript" src="{{uni_url}}/inc/js/plugins.js"></script>
+<script type="text/javascript" src="{{uni_url}}/inc/js/config.js"></script>
+<script type="text/javascript" src="{{uni_url}}/inc/js/functions.js"></script>
+<script src="{{uni_url}}/inc/js/bootstrap.min.js"></script>
+<script src="{{uni_url}}/inc/plugins/ckeditor/ckeditor.js"></script>
+<script type="text/javascript" src="{{uni_url}}/inc/plugins/ckeditor/jquery.js"></script>
 <!-- Seeds using urandom bits from a server. -->
 <script src="//jsonlib.appspot.com/urandom?callback=Math.seedrandom"></script>
 
