--- a/inc/css/style.css
+++ b/inc/css/style.css
@@ -2225,27 +2225,31 @@ color: #FFF;
 }
 
 .shareList li{
-	width: 50%;
-	height: 40px;
-	border-left: 1px solid #4f85bb;
-	border-bottom: 1px solid #4f85bb;
-	background: #7A9BBD;
-	float: left;
-	-moz-box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	box-sizing: border-box;
-	padding: 10px;
-	font-size: 20px;
-	cursor: pointer;
+    width: 50%;
+    height: 40px;
+    border-left: 1px solid #4f85bb;
+    border-bottom: 1px solid #4f85bb;
+    background: #7A9BBD;
+    float: left;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 10px;
+    padding-top: 8px;
+    padding-left: 15px;
+    font-size: 20px;
+    cursor: pointer;
 }
 
 .shareList li:hover, .shareList .active{
 	background-color: #607F9E;
 }
 
-.shareList li img{
-	height: 20px;
-	float:right;
+.shareList li .icon{
+    float: left;
+    display: inline-block;
+    margin-top: -6px;
+    margin-left: -5px;
 }
 
 .shareBox{
@@ -2258,6 +2262,17 @@ color: #FFF;
 	padding: 30px;
 	background: rgba(255,255,255,0.4);
 	border: 1px dotted #c9c9c9;
+}
+
+.shareBox li .btn{
+    font-size: 20px;
+    padding-top: 6px;
+}
+
+.shareBox li .btn .icon{
+    display: inline-block;
+    float: left;
+    margin-top: -2px;
 }
 
 .shareBox textarea{
@@ -5380,6 +5395,10 @@ and (max-width : 320px) {
     height: 120px;
     width: 280px;
 }
+.alert.support.arrow-right {
+    margin-left: -20px;
+    margin-top: 10px;
+}
 
 .alert.support footer{
     position: absolute;
@@ -5398,11 +5417,15 @@ and (max-width : 320px) {
 }
 .alert.support .blue-chevron-up{
     margin-top: -54px;
-    
     margin-left: -9px;
 }
 .alert.support .blue-chevron-right{
-    
+    position: absolute;
+    margin-top: -81px;
+    margin-left: 264px;
+}
+.alert.support.arrow-left {
+    margin-top: 9px;
 }
 
 .alert.support .blue-chevron-down.right{
@@ -5410,10 +5433,12 @@ and (max-width : 320px) {
     right: 0;
     margin-right: -10px;
 }
-.alert.support .blue-chevron-left{
+.alert.support .blue-chevron-left {
     margin-left: -18px;
-    
-    margin-top: -45px;
+    margin-top: -84px;
+}
+.alert.support.arrow-top {
+    margin-top: -100px;
 }
 
 
