--- a/views/guestpage/guest_area.html
+++ b/views/guestpage/guest_area.html
@@ -20,10 +20,9 @@
             </div>
             <div class="guestBox" id="clearBox">
                 <ul id="regHintBox">
-                    <li><img src="gfx/guest/icon_01.svg"><span>encrypt your data<br>and communication</span></li>
-                    <li><img src="gfx/guest/icon_02.svg"><span>present yourself and<br>stay in touch with your buddies</span></li>
-                    <li><img src="gfx/guest/icon_03.svg"><span>save, organize and<br>share your files</span></li>
-                    <li><img src="gfx/guest/icon_04.svg"><span>use public files and<br>make your files accessible</span></li>
+                    <li>Warning!</li>
+                    <li>The development of the universeOS is on hold at the moment. We won't fix bugs or security issues at the moment.</li>
+                    <li>Visit our <a href="https://github.com/transparency-everywhere/universeOS">Github Page</a> for more Infos.</li>
                 </ul>
             </div>
         </div>
